src/main/openshift/spring-boot-hello-world-integration.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 1
    labels:
      app: spring-boot-hello-world
    name: spring-boot-hello-world
  spec:
    replicas: 1
    selector:
      app: spring-boot-hello-world
      deploymentconfig: spring-boot-hello-world
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: spring-boot-hello-world
          deploymentconfig: spring-boot-hello-world
      spec:
        containers:
        - image: null
          imagePullPolicy: Always
          name: spring-boot-hello-world
          ports:
          - containerPort: 8778
            protocol: TCP
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /etc/secrets
            name: volume-spring-boot-hello-world-secret
            readOnly: true
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: volume-spring-boot-hello-world-secret
          secret:
            defaultMode: 420
            secretName: spring-boot-hello-world
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-boot-hello-world
        from:
          kind: ImageStreamTag
          name: spring-boot-hello-world:latest
          namespace: development
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: spring-boot-hello-world
    name: spring-boot-hello-world
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: spring-boot-hello-world
      deploymentconfig: spring-boot-hello-world
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: spring-boot-hello-world
    name: spring-boot-hello-world
  spec:
    host: spring-boot-hello-world-integration.192.168.99.100.nip.io
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: spring-boot-hello-world
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2017-06-14T11:52:49Z
        status: "True"
        type: Admitted
      host: spring-boot-hello-world-integration.192.168.99.100.nip.io
      routerName: router
      wildcardPolicy: None
- kind: ConfigMap
  apiVersion: v1
  metadata:
    name: spring-boot-hello-world
  data:
    demo.customMessage: Hello World in integration environment !
    spring.application.name: spring-boot-hello-world
    spring.cloud.kubernetes.reload.enabled: "true"
    spring.cloud.kubernetes.secrets.paths: file:/etc/secrets/spring-boot-hello-world-secret.properties
- apiVersion: v1
  kind: Secret
  type: Opaque
  metadata:
    name: spring-boot-hello-world
  data:
    spring-boot-hello-world-secret.properties: dXNlcm5hbWU9Y3lyaWxsZQpwYXNzd29yZD1wYXNzd29yZC1pbnQK
kind: List
metadata: {}
